--- a/src/css/html_builder.css
+++ b/src/css/html_builder.css
@@ -368,17 +368,23 @@ body
 
 .hb_title-block .hb_input
 {
-	width: 60%;
+	width: 90%;
 	margin-left: auto;
 	margin-right: auto;
 }
 
 .hb_title-block .hb_btn
 {
-	float: right;
-	width: 25px;
-	height: 25px;
-	margin-right: 5px;
+	display: inline-block;
+	width: 90%;
+	height: 20px;
+	margin-top: 3px;
+	margin-left: auto;
+	margin-right: auto;
+	color: #212529;
+	text-align: center;
+	vertical-align: middle;
+	font-size: 12px;
 }
 
 .hb_title-block .hb_select
