--- a/src/css/html_builder_bootstrap.css
+++ b/src/css/html_builder_bootstrap.css
@@ -48,8 +48,26 @@ body
 .hb_width-75 {
 	position: : relative;
 	width: 75%;
-	height: 100%;
+	height: 25px;
 	box-sizing: border-box;
+
+	display: inline-block;
+    font-weight: 400;
+    color: #ffffff;
+    text-align: center;
+    vertical-align: middle;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    background-color: transparent;
+    border: 1px solid transparent;
+    border-radius: 0.25rem;
+    font-size: 12px;
+    transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+
+	background-color: #6c757d;
+	border-color: #545b60;
 }
 
 .hb_margin-5px {
@@ -181,7 +199,7 @@ body
 .hb_main-menu .hb_nav
 {
 	width: 100%;
-	height: 5%;
+	height: 25px;
 }
 
 .hb_main-menu .hb_nav .hb_btn-nav
@@ -523,7 +541,15 @@ body
 	background-image: url("../icon/btn-resolution-phone.svg");
 	background-position: center;
     background-repeat: no-repeat;
-    background-size: contain;
+    background-size: 70% 70%;
+
+	user-select: none;
+	border: 1px solid transparent;
+	font-size: 12px;
+	border-radius: 0.25rem;
+	transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+	background-color: #9da8b2;
+	border-color: #76818b;
 }
 
 .hb_setting-btn-tablet
@@ -534,7 +560,15 @@ body
 	background-image: url("../icon/btn-resolution-tablet.svg");
 	background-position: center;
     background-repeat: no-repeat;
-    background-size: contain;
+    background-size: 70% 70%;
+
+	user-select: none;
+	border: 1px solid transparent;
+	font-size: 12px;
+	border-radius: 0.25rem;
+	transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+	background-color: #9da8b2;
+	border-color: #76818b;
 }
 
 .hb_setting-btn-browser
@@ -545,7 +579,15 @@ body
 	background-image: url("../icon/btn-resolution-computer.svg");
 	background-position: center;
     background-repeat: no-repeat;
-    background-size: contain;
+    background-size: 70% 70%;
+
+	user-select: none;
+	border: 1px solid transparent;
+	font-size: 12px;
+	border-radius: 0.25rem;
+	transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+	background-color: #9da8b2;
+	border-color: #76818b;
 }
 
 /*--------------- MENU SETTING POPUP --------------*/
