--- a/src/renewal/css/html_builder.css
+++ b/src/renewal/css/html_builder.css
@@ -13,7 +13,7 @@
 html, 
 body
 {
-	width: :100%;
+	width: 100%;
     height: 100%;
     margin: 0;
     padding: 5px;
@@ -46,7 +46,7 @@ body
 }
 
 .hb_width-75 {
-	position: : relative;
+	position: relative;
 	width: 75%;
 	height: 25px;
 	box-sizing: border-box;
@@ -70,6 +70,7 @@ body
 	border-color: #545b60;
 }
 
+/*
 .hb_margin-5px {
 	margin: 2px;
 }
@@ -85,6 +86,7 @@ body
 .hb_padding-10px {
 	padding: 10px;
 }
+*/
 
 .hb_outline-solid
 {
@@ -136,62 +138,6 @@ body
 	box-shadow: 3px 0px 0px #f4aa42 !important;
 }
 
-/*--------------- FUNCTION BLOCK --------------*/
-
-.hb_func-menu 
-{
-	width: 50px;
-	height: 20px;
-}
-
-.hb_func-menu .hb_btn-func {
-	display: inline-block;
-	float: left;
-	width:50%;
-	height:100%;
-	outline: none;
-
-	border: 1px solid #4f555a;
-	background-color: #9da8b2;
-}
-
-.hb_func-menu .hb_btn-func:hover {
-	background-color: #b5c1cc;
-}
-
-.hb_btn-delete
-{
-	background-image: url("../icon/btn-delete.svg");
-	background-position: center;
-    background-repeat: no-repeat;
-    background-size: 90% 90%;
-}
-
-.hb_btn-copy
-{
-	background-image: url("../icon/btn-copy.svg");
-	background-position: center;
-    background-repeat: no-repeat;
-    background-size: 90% 90%;
-}
-
-.hb_btn-add
-{
-	background-image: url("../icon/btn-add.svg");
-	background-position: center;
-    background-repeat: no-repeat;
-    background-size: contain;
-}
-
-.hb_btn-save
-{
-	background-image: url("../icon/btn-save.svg");
-	background-position: center;
-    background-repeat: no-repeat;
-    background-size: contain;
-}
-
-
 /*--------------- CONTENT --------------*/
 .hb_selectable {
 	outline: 3px dashed #1da57a !important;
@@ -201,15 +147,14 @@ body
 	outline: 3px solid #1da57a !important;
 }
 
-
 /*--------------- NAV --------------*/
-.hb_main-menu .hb_nav
+.hb_nav
 {
 	width: 100%;
 	height: 25px;
 }
 
-.hb_main-menu .hb_nav .hb_btn-nav
+.hb_btn-nav
 {
 	display: inline-block;
     font-weight: 400;
@@ -237,7 +182,7 @@ body
 	height:100%;
 }
 
-.hb_main-menu .hb_nav .hb_btn-nav:hover 
+.hb_btn-nav:hover 
 {
 	background-color: #858f98;
 	border-color: #545b60;
@@ -245,7 +190,7 @@ body
 
 .hb_btn-nav-attr
 {
-	background-image: url("../icon/nav-attr-bootstrap.svg");
+	background-image: url("../icon/nav/nav-attr.svg");
 	background-position: center;
     background-repeat: no-repeat;
     background-size: 70% 70%;
@@ -253,7 +198,7 @@ body
 
 .hb_btn-nav-block
 {
-	background-image: url("../icon/nav-blocks-bootstrap.svg");
+	background-image: url("../icon/nav/nav-blocks.svg");
 	background-position: center;
     background-repeat: no-repeat;
     background-size: 70% 70%;
@@ -262,15 +207,13 @@ body
 
 .hb_btn-nav-setting
 {
-	background-image: url("../icon/nav-setting-bootstrap.svg");
+	background-image: url("../icon/nav/nav-setting.svg");
 	background-position: center;
     background-repeat: no-repeat;
     background-size: 70% 70%;
 }
 
-
-/*--------------- CONTENT BLOCK --------------*/
-.hb_main-menu .hb_content
+.hb_nav_content
 {
 	width: 100%;
 	height: 95%;
@@ -278,15 +221,22 @@ body
 	overflow-y: scroll;
 }
 
-.hb_main-menu .hb_content-blocks
+.hb_nav_content-blocks
 {
 	width: 95%;
 	text-align: center;
 }
 
-.hb_main-menu .hb_content-blocks .hb_btn-block
+.hb_nav_content-prop
 {
-	float:left;
+	width: 100%;
+	text-align: center;
+}
+
+/*--------------- BLOCK -------------- */
+.hb_btn-block
+{
+	display: inline-block;
 	width: 40%;
 	height: 120px;
 	padding: 5px;
@@ -295,7 +245,7 @@ body
 	border: 1px solid #495267;
 }
 
-.hb_main-menu .hb_content-blocks .hb_btn-block:hover {
+.hb_btn-block:hover {
 	border:1px solid #a0a0a0;
 }
 
@@ -321,73 +271,85 @@ body
     pointer-events : none;
     background-position: center;
     background-repeat: no-repeat;
-    /*background-size: cover;*/
     background-size: contain;
 }
 
 .hb_btn-div 
 {
-	background-image: url("../icon/div.svg");
+	background-image: url("../icon/block/div.svg");
+}
+
+.hb_btn-h
+{
+	background-image: url("../icon/block/h.svg");
 }
 
 .hb_btn-p 
 {
-	background-image: url("../icon/p.svg");
+	background-image: url("../icon/block/p.svg");
 }
 
 .hb_btn-input 
 {
-	background-image: url("../icon/input.svg");
+	background-image: url("../icon/block/input.svg");
 }
 
 .hb_btn-text-area 
 {
-	background-image: url("../icon/text-area.svg");
+	background-image: url("../icon/block/text-area.svg");
 }
 
 .hb_btn-link
 {
-	background-image: url("../icon/link.svg");
+	background-image: url("../icon/block/link.svg");
 }
 
 .hb_btn-img 
 {
-	background-image: url("../icon/img.svg");
+	background-image: url("../icon/block/img.svg");
 }
 
 .hb_btn-select
 {
-	background-image: url("../icon/select-box.svg");
+	background-image: url("../icon/block/select-box.svg");
 }
 
 .hb_btn-button
 {
-	background-image: url("../icon/button.svg");
+	background-image: url("../icon/block/button.svg");
 }
 
 .hb_btn-label
 {
-	background-image: url("../icon/label.svg");
+	background-image: url("../icon/block/label.svg");
 }
 
 .hb_btn-check-box 
 {
-	background-image: url("../icon/check-box.svg");
+	background-image: url("../icon/block/check-box.svg");
 }
 
 .hb_btn-radio 
 {
-	background-image: url("../icon/radio.svg");
+	background-image: url("../icon/block/radio.svg");
 }
 
-/*--------------- CONTENT ATTR --------------*/
-.hb_main-menu .hb_content-attr
+/*--------------- PROPERTY --------------*/
+.hb_prop_body
 {
 	width: 100%;
 	text-align: center;
 }
 
-.hb_main-menu .hb_content-attr .hb_attr-block
+.hb_sub_category_toggle_body_div
+{
+	width: 100%;
+	background-color: #9fa8b7;
+	font-size:12px; 
+	cursor:pointer;
+}
+
+.hb_category_body_div, .hb_prop_body_div
 {
 	width: 90%;
 	margin-top: 10px;
@@ -395,29 +357,47 @@ body
 	margin-left: auto;
   	margin-right: auto;
 	border: 2px solid #495267;
+	text-align: center;
 }
 
-.hb_main-menu .hb_content-attr .hb_attr-block .hb_title-block
+.hb_category_body_title_div
 {
+	width: 100%;
+	min-height: 25px;
+	background-color: #9fa8b7;
+	font-size:13px;
+	font-weight: bold; 
+	cursor:pointer;
+}
+
+.hb_prop_body_title_div
+{
+	width: 100%;
+	min-height: 25px;
+	margin-top: 5px;
+	margin-bottom: 5px;
+}
+
+.hb_category_body_title_label, .hb_prop_body_title_label
+{
+	float: left;
+	width: 90%;
+	height: 20px;
+	margin-left: auto;
+	margin-right: auto;
+	font-size: 11px;
+	font-weight: bold;
+	overflow-wrap: break-word;
+}
+
+.hb_prop_body_set_div {
 	width: 100%;
 	min-height: 30px;
 	margin-top: 5px;
 	margin-bottom: 5px;
 }
 
-.hb_title-block .hb_lbl
-{
-	float: left;
-	width: 90%;
-	height: 22px;
-	margin-left: auto;
-	margin-right: auto;
-	font-size: 12px;
-	font-weight: bold;
-	overflow-wrap: break-word;
-}
-
-.hb_title-block .hb_input
+.hb_prop_body_set_text
 {
 	width: 90%;
 	height: 20px;
@@ -426,7 +406,7 @@ body
 	margin-right: auto;
 }
 
-.hb_title-block .hb_btn
+.hb_prop_body_set_btn
 {
 	display: inline-block;
 	text-align: center;
@@ -449,14 +429,23 @@ body
 	margin-right: auto;
 }
 
-.hb_title-block .hb_btn:hover
+.hb_prop_body_set_btn:hover
 {
 	color: #fff;
   	background-color: #5a6268;
   	border-color: #545b62;
 }
 
-.hb_title-block .hb_select
+.hb_prop_body_set_select
+{
+	width: 90%;
+	height: 20px;
+	font-size: 12px;
+	margin-left: auto;
+	margin-right: auto;
+}
+
+.hb_prop_body_set_multi_select
 {
 	width: 90%;
 	height: 100px;
@@ -464,66 +453,53 @@ body
 	overflow: auto;
 }
 
-.hb_main-menu .hb_content-attr .hb_attr-block .hb_attr-list-block
-{
-	width: 100%;
-}
-
-.hb_attr-list-block .hb_block {
-	width: 100%;
-}
-
-/*--------------- CONTENT STYLE --------------*/
-.hb_main-menu .hb_content-attr .hb_attr-block .hb_style_title-block
-{
-	width: 100%;
-	min-height: 23px;
-	background-color: #9fa8b7;
-}
-
-.hb_style_title-block .hb_style_lbl
-{
-	width: 90%;
-	height: 22px; 
-	margin-left: auto;
-	margin-right: auto;
-	font-size: 12px;
-	font-weight: bold;
-	overflow-wrap: break-word;
-}
-
-.hb_title-block .hb_style_lbl
+.hb_prop_body_set_color
 {
 	width: 90%;
 	height: 20px;
-	margin-right: auto;
 	margin-left: auto;
-	font-size: 11px;
-	font-weight: bold;
-	overflow-wrap: break-word;
+	margin-right: auto;
 }
 
-.hb_title-block .hb_style_input
+/*--------------- FUNCTION BLOCK --------------*/
+.hb_func-menu 
 {
-	width: 90%;
+	width: 50px;
 	height: 20px;
-	font-size: 12px;
-	margin-right: auto;
-	margin-left: auto;
 }
 
-.hb_title-block .hb_style_select
-{
-	width: 90%;
-	height: 20px;
-	font-size: 12px;
-	margin-right: auto;
-	margin-left: auto;
+.hb_btn-func {
+	display: inline-block;
+	width:50%;
+	height:100%;
+	outline: none;
+
+	border: 1px solid #4f555a;
+	background-color: #9da8b2;
 }
 
-/*--------------- MENU SETTING --------------*/
-.hb_setting-block
+.hb_btn-func:hover {
+	background-color: #b5c1cc;
+}
+
+.hb_btn-delete
 {
+	background-image: url("../icon/func/btn-delete.svg");
+	background-position: center;
+    background-repeat: no-repeat;
+    background-size: 90% 90%;
+}
+
+.hb_btn-copy
+{
+	background-image: url("../icon/func/btn-copy.svg");
+	background-position: center;
+    background-repeat: no-repeat;
+    background-size: 90% 90%;
+}
+
+/*--------------- SETTING --------------*/
+.hb_setting_div {
 	width: 90%;
 	margin-top: 10px;
 	margin-bottom: 10px;
@@ -532,12 +508,51 @@ body
 	border: 2px solid #495267;
 }
 
-.hb_setting-block .hb_title-block
-{
+.hb_setting_title_div {
+	width: 100%;
+	min-height: 15px;
+	margin-top: 5px;
+	margin-bottom: 5px;
+}
+
+.hb_setting_content_div {
 	width: 100%;
 	min-height: 30px;
 	margin-top: 5px;
 	margin-bottom: 5px;
+}
+
+.hb_setting_title_label {
+	width: 100%;
+	font-weight: bold;
+}
+
+.hb_setting-btn {
+	display: inline-block;
+	text-align: center;
+	vertical-align: middle;
+	user-select: none;
+	background-color: transparent;
+	border: 1px solid transparent;
+	font-size: 12px;
+	border-radius: 0.25rem;
+	transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+
+	color: #fff;
+	background-color: #6c757d;
+	border-color: #6c757d;
+
+	width: 90%;
+	height: 20px;
+	margin-top: 3px;
+	margin-left: auto;
+	margin-right: auto;
+}
+
+.hb_setting-btn:hover 
+{
+	background-color: #858f98;
+	border-color: #545b60;
 }
 
 .hb_setting-btn-phone
@@ -545,7 +560,7 @@ body
 	width: 30px;
 	height: 30px;
 	margin: 5px;
-	background-image: url("../icon/btn-resolution-phone.svg");
+	background-image: url("../icon/setting/btn-resolution-phone.svg");
 	background-position: center;
     background-repeat: no-repeat;
     background-size: 70% 70%;
@@ -564,7 +579,7 @@ body
 	width: 30px;
 	height: 30px;
 	margin: 5px;
-	background-image: url("../icon/btn-resolution-tablet.svg");
+	background-image: url("../icon/setting/btn-resolution-tablet.svg");
 	background-position: center;
     background-repeat: no-repeat;
     background-size: 70% 70%;
@@ -583,7 +598,7 @@ body
 	width: 30px;
 	height: 30px;
 	margin: 5px;
-	background-image: url("../icon/btn-resolution-computer.svg");
+	background-image: url("../icon/setting/btn-resolution-computer.svg");
 	background-position: center;
     background-repeat: no-repeat;
     background-size: 70% 70%;
@@ -597,7 +612,7 @@ body
 	border-color: #76818b;
 }
 
-/*--------------- MENU SETTING POPUP --------------*/
+/*--------------- SETTING POPUP --------------*/
 .hb_setting-popup
 {
 	position: absolute;
@@ -669,7 +684,7 @@ body
 	height: 25px;
 	float: right;
 	margin: 10px;
-	background-image: url("../icon/btn-cancel.svg");
+	background-image: url("../icon/setting/btn-cancel.svg");
 	background-position: center;
     background-repeat: no-repeat;
     background-size: 80% 80%;
