--- a/renewal/js/property/css/property.css
+++ b/renewal/js/property/css/property.css
@@ -10,6 +10,114 @@ M은 Modifiers
 .stick-man--blue { } .stick-man--red { }
 */
 
+.hb_prop-body {
+  width: 100%;
+  height: 100%;
+  background-color: #2f2631;
+  border-left: 2px solid #131014;
+}
+
+.hb_nav-icon {
+  display: inline-block;
+  width: 18px;
+  height: 18px;
+  border: none;
+  background-image: url('./img/expand_more-black-48dp.svg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-color: transparent;
+  transition: all .2s ease-out;
+  vertical-align: middle;
+  outline: none;
+  fill: #fff
+}
+
+.hb_nav-icon.hide {
+  transform: rotate(-90deg);
+}
+
+.hb_prop-section {
+  width: 100%;
+  margin: 0;
+}
+
+.hb_prop-section__title {
+  width: 100%;
+  height: 30px;
+  background-color: #211b23;
+  border-bottom: 2px solid #131014;
+
+}
+
+.hb_prop-section__title__label {
+  font-size: 13px;
+  font-weight: bold;
+  line-height: 30px;
+  color: #b9a5a6;
+  -webkit-user-select: none; /* Safari */
+  -ms-user-select: none; /* IE 10+ and Edge */
+  user-select: none; /* Standard syntax */
+}
+
+.hb_prop-section__content {
+  width: 100%;
+  height: auto;
+  overflow:hidden;
+  transition: all .2s ease-out;
+  background-color: #59475c;
+}
+
+.hb_prop-section__content.hide {
+  max-height: 0;
+}
+
+.hb_prop {
+  display: flex;
+  width: 100%;
+  height:auto;
+  padding: 5px;
+  justify-content: space-around;
+}
+
+.hb_prop__title {
+  display: inline-block;
+  width: 20%;
+  font-size: 14px;
+  text-align: left;
+  line-height: 25px;
+  color:#b9a5a6;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
+}
+
+.hb_prop__text {
+  display: inline-block;
+  width:70%;
+  height: 25px;
+  border: 1px solid #59475c;
+  border-radius: 5px;
+  background-color: #211b23;
+  font-size: 13px;
+  color: #b9a5a6;
+  padding: 3px;
+  outline: 0;
+}
+
+.hb_prop__select {
+
+}
+
+.hb_prop__unit {
+
+}
+
+.hb_prop__content {
+
+}
+
+
+
 .prop-category__title {
   width: 60%;
   font-size: 14px;
