--- a/renewal/js/property/css/property.css
+++ b/renewal/js/property/css/property.css
@@ -46,7 +46,6 @@ M은 Modifiers
   height: 30px;
   background-color: #211b23;
   border-bottom: 2px solid #131014;
-
 }
 
 .hb_prop-section__title__label {
@@ -80,10 +79,13 @@ M은 Modifiers
 }
 
 .hb_prop__title {
-  display: inline-block;
-  width: 20%;
-  font-size: 14px;
-  text-align: left;
+  width: 60%;
+  height: 25px;
+  box-sizing: border-box;
+  border: 1px solid #b9a5a6;
+  border-radius: 5px;
+  font-size: 12px;
+  font-weight: bold;
   line-height: 25px;
   color:#b9a5a6;
   white-space: nowrap;
@@ -91,13 +93,30 @@ M은 Modifiers
   overflow: hidden;
 }
 
+.hb_prop__sub_title {
+  font-size: 12px;
+  font-weight: bold;
+  line-height: 25px;
+  color:#b9a5a6;
+}
+
+.hb_prop__content {
+  width: 95%;
+  box-sizing: border-box;
+  margin: 10px auto;
+  border: 1px solid #b9a5a6;
+  border-radius: 5px;
+}
+
 .hb_prop__text {
-  display: inline-block;
-  width:70%;
+  display: block;
+  width: 95%;
   height: 25px;
+  box-sizing: border-box;
+  margin: 0 auto;
+  background-color: #211b23;
   border: 1px solid #59475c;
   border-radius: 5px;
-  background-color: #211b23;
   font-size: 13px;
   color: #b9a5a6;
   padding: 3px;
@@ -105,169 +124,68 @@ M은 Modifiers
 }
 
 .hb_prop__select {
-
+  display: block;
+  width: 95%;
+  height: 25px;
+  margin: 5px auto;
+  background-color: #211b23;
+  border: 1px solid #59475c;
+  border-radius: 5px;
+  font-size: 13px;
+  color: #b9a5a6;
 }
 
 .hb_prop__unit {
-
-}
-
-.hb_prop__content {
-
-}
-
-
-
-.prop-category__title {
-  width: 60%;
-  font-size: 14px;
-  font-weight: bold;
-  padding: 3px;
-  border: 1px solid #cecfcf;
-  background-color: #313232;
-}
-
-.prop-category__body {
-  width: 92%;
-  margin: 10px auto;
-  padding: 0px;
-  border: 1px solid #cecfcf;
-  background-color: #313232;
-}
-
-.prop-sub-category__title {
-  width: 40%;
-  text-align: left;
-  font-size: 11px;
-  font-weight: bold;
-  padding: 2px;
-  border: 1px solid #cecfcf;
-  background-color: #313232;
-}
-
-.prop-sub-category__body {
-  width: 92%;
-  margin: 10px auto;
-  padding: 0px;
-  border: 2px solid #cecfcf;
-  background-color: #313232;
-}
-
-
-
-
-.hb_prop_body {
-  width: 100%;
-  text-align: center;
-}
-
-.hb_sub_category_toggle_body_div {
-  width: 100%;
-  background-color: #9fa8b7;
-  font-size: 12px;
-  cursor: pointer;
-}
-
-.hb_category_body_div,
-.hb_prop_body_div {
-  width: 90%;
-  margin-top: 10px;
-  margin-bottom: 10px;
-  margin-left: auto;
-  margin-right: auto;
-  border: 2px solid #495267;
-  text-align: center;
-}
-
-.hb_category_body_title_div {
-  width: 100%;
-  min-height: 25px;
-  background-color: #9fa8b7;
+  display: block;
+  width: 95%;
+  height: 25px;
+  margin: 5px auto;
+  background-color: #211b23;
+  border: 1px solid #59475c;
+  border-radius: 5px;
   font-size: 13px;
-  font-weight: bold;
-  cursor: pointer;
+  color: #b9a5a6;
 }
 
-.hb_prop_body_title_div {
-  width: 100%;
-  min-height: 25px;
-  margin-top: 5px;
-  margin-bottom: 5px;
-}
-
-.hb_category_body_title_label,
-.hb_prop_body_title_label {
-  float: left;
-  width: 90%;
+.hb_prop__button {
+  display: block;
+  width: 95%;
   height: 20px;
-  margin-left: auto;
-  margin-right: auto;
-  font-size: 11px;
-  font-weight: bold;
-  overflow-wrap: break-word;
-}
-
-.hb_prop_body_set_div {
-  width: 100%;
-  min-height: 30px;
-  margin-top: 5px;
-  margin-bottom: 5px;
-}
-
-.hb_prop_body_set_text {
-  width: 90%;
-  height: 20px;
-  font-size: 12px;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-.hb_prop_body_set_btn {
-  display: inline-block;
+  margin: 5px auto;
   text-align: center;
-  vertical-align: middle;
   user-select: none;
   background-color: transparent;
   border: 1px solid transparent;
   font-size: 12px;
   border-radius: 0.25rem;
-  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
-
+  transition: all 0.15s ease-in-out;
   color: #fff;
   background-color: #6c757d;
   border-color: #6c757d;
-
-  width: 90%;
-  height: 20px;
-  margin-top: 3px;
-  margin-left: auto;
-  margin-right: auto;
 }
 
-.hb_prop_body_set_btn:hover {
+.hb_prop__button:hover {
   color: #fff;
   background-color: #5a6268;
   border-color: #545b62;
 }
 
-.hb_prop_body_set_select {
-  width: 90%;
-  height: 20px;
-  font-size: 12px;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-.hb_prop_body_set_multi_select {
-  width: 90%;
+.hb_prop__multi_select {
+  display: block;
+  width: 95%;
   height: 100px;
+  margin: 0px auto;
   font-size: 12px;
   overflow: auto;
 }
 
-.hb_prop_body_set_color {
-  width: 90%;
-  height: 20px;
-  margin-left: auto;
-  margin-right: auto;
+.hb_prop__color {
+  display: block;
+  width: 95%;
+  height: 25px;
+  margin: 0px auto;
+  background-color: #313232;
+  border: 1px solid #33383c;
+  border-radius: 3px;
+  outline: none;
 }
